k8s/slm/slm-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: slm-ingress
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /v1/backup_policies
            backend:
              service:
                name: regional-slm-load-balancer
                port:
                  number: 8002
#    - http:
#        paths:
#          - pathType: Prefix
#            path: /
#            backend:
#              service:
#                name: mock-regional-load-balancer
#                port:
#                  number: 8030
